新增文件删除接口

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,11 +35,11 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 #-----------------------OSS STS\u914D\u7F6E\u53C2\u6570
 oss.endpoint=sts.cn-hangzhou.aliyuncs.com
-oss.access_key_id=LTAI5tK53gdskA82979AnPuX
-oss.access_key_secret=yELEI2VUNl99tfdV0buZGgL9NDacBa
-oss.bucket_name=rawrblock
-oss.role.arn=acs:ram::1994847584312412:role/ramosstest
-oss.region_id=oss-cn-hangzhou
+oss.access_key_id=oss\u7684accesskey
+oss.access_key_secret=oss\u7684accesskeysecret
+oss.bucket_name=oss\u7684bucket_name
+oss.role.arn=oss\u7684role.arn
+oss.region_id=oss\u7684region_id
 
 
 
